force-app/main/default/objects/Case/fields/dcp_Claim_Type_Select__c.field-meta.xml
<CustomField>
    <fullName>dcp_Claim_Type_Select__c</fullName>
    <description>Type of Claim</description>
    <label>Claim Type Select</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint Settlement</fullName>
            </value>
            <value>
                <fullName>Outage</fullName>
            </value>
            <value>
                <fullName>Power Surge</fullName>
            </value>
            <value>
                <fullName>Public Liability</fullName>
            </value>
            <value>
                <fullName>Telstra</fullName>
            </value>
            <value>
                <fullName>WVTNP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>