force-app/main/default/objects/Case/fields/dcp_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>dcp_Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that closed the Case</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>