force-app/main/default/objects/Case/fields/dcp_Closure_Notes__c.field-meta.xml
<CustomField>
    <fullName>dcp_Closure_Notes__c</fullName>
    <description>Case closure details</description>
    <label>Closure Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>