force-app/main/default/objects/Case/fields/dcp_Compcode__c.field-meta.xml
<CustomField>
    <fullName>dcp_Compcode__c</fullName>
    <description>Company code</description>
    <label>Compcode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1300</fullName>
            </value>
            <value>
                <fullName>2100</fullName>
            </value>
            <value>
                <fullName>1100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>