force-app/main/default/objects/Case/fields/dcp_Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>dcp_Complaint_Category__c</fullName>
    <description>Complaint category required for regulatory reports</description>
    <label>Complaint Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>