force-app/main/default/objects/Case/fields/dcp_Complaint_Department__c.field-meta.xml
<CustomField>
    <fullName>dcp_Complaint_Department__c</fullName>
    <description>Complaint department required for regulatory reports</description>
    <label>Complaint Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>