force-app/main/default/objects/Case/fields/dcp_Complaint_Division__c.field-meta.xml
<CustomField>
    <fullName>dcp_Complaint_Division__c</fullName>
    <description>Complaint division required for regulatory reports</description>
    <label>Complaint Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>