force-app/main/default/objects/Case/fields/dcp_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>dcp_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12510</fullName>
            </value>
            <value>
                <fullName>13175</fullName>
            </value>
            <value>
                <fullName>22175</fullName>
            </value>
            <value>
                <fullName>23175</fullName>
            </value>
            <value>
                <fullName>33175</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>