force-app/main/default/objects/Case/fields/DCP_Currency__c.field-meta.xml
<CustomField>
    <fullName>DCP_Currency__c</fullName>
    <description>For Financial Reporting - not for UI</description>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>