force-app/main/default/objects/Case/fields/dcp_Customer_Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>dcp_Customer_Postal_Address__c</fullName>
    <description>Used to capture customer site address for Elec - Settlement and Release email</description>
    <formula>Account.ShippingStreet &amp; &quot;, &quot; &amp;
Account.ShippingCity &amp; &quot;, &quot; &amp;
Account.ShippingState &amp; &quot; &quot; &amp;
Account.ShippingPostalCode &amp; BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Postal Address</label>
    <type>Text</type>
</CustomField>