force-app/main/default/objects/Case/fields/dcp_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>dcp_Customer_Segment__c</fullName>
    <description>Segmentation of customer associated to Case</description>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>