force-app/main/default/objects/Case/fields/dcp_Customer_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>dcp_Customer_Site_Address__c</fullName>
    <description>Used to capture customer site address for Elec - Settlement and Release email</description>
    <formula>dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__StreetAddress__c &amp; &quot;, &quot; &amp;
dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__City__c &amp; &quot;, &quot; &amp;
dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__State__c &amp; &quot; &quot; &amp;
dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Site Address</label>
    <type>Text</type>
</CustomField>