force-app/main/default/objects/Case/fields/dcp_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>dcp_Customer_Type__c</fullName>
    <description>Type of AusNet customer</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>WVTNP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>