force-app/main/default/objects/Case/fields/dcp_Days_left_to_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>dcp_Days_left_to_Due_Date__c</fullName>
    <formula>Round(( dcp_Due_Date__c - TODAY() ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left to Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>