force-app/main/default/objects/Case/fields/dcp_Depot_Area__c.field-meta.xml
<CustomField>
    <fullName>dcp_Depot_Area__c</fullName>
    <label>Depot Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bairnsdale</fullName>
            </value>
            <value>
                <fullName>Bass Coast</fullName>
            </value>
            <value>
                <fullName>Beaconsfield</fullName>
            </value>
            <value>
                <fullName>Benalla</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Lilydale</fullName>
            </value>
            <value>
                <fullName>Out of area</fullName>
            </value>
            <value>
                <fullName>Seymour</fullName>
            </value>
            <value>
                <fullName>South Morang</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Traralgon</fullName>
            </value>
            <value>
                <fullName>Wodonga</fullName>
            </value>
            <value>
                <fullName>AMI</fullName>
                <isActive>false</isActive>
                <label>AMI</label>
            </value>
            <value>
                <fullName>Gas - Ballarat</fullName>
                <isActive>false</isActive>
                <label>Gas - Ballarat</label>
            </value>
            <value>
                <fullName>Gas - Bendigo</fullName>
                <isActive>false</isActive>
                <label>Gas - Bendigo</label>
            </value>
            <value>
                <fullName>Gas - Geelong</fullName>
                <isActive>false</isActive>
                <label>Gas - Geelong</label>
            </value>
            <value>
                <fullName>Gas - Metro North</fullName>
                <isActive>false</isActive>
                <label>Gas - Metro North</label>
            </value>
            <value>
                <fullName>Gas - Metro South</fullName>
                <isActive>false</isActive>
                <label>Gas - Metro South</label>
            </value>
            <value>
                <fullName>Gas - Warrnambool</fullName>
                <isActive>false</isActive>
                <label>Gas - Warrnambool</label>
            </value>
            <value>
                <fullName>Leongatha</fullName>
                <isActive>false</isActive>
                <label>Leongatha</label>
            </value>
            <value>
                <fullName>Vegetation</fullName>
                <isActive>false</isActive>
                <label>Vegetation</label>
            </value>
            <value>
                <fullName>select_solutions</fullName>
                <isActive>false</isActive>
                <label>select_solutions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>