force-app/main/default/objects/Case/fields/dcp_Description_Circumstances_of_Claim__c.field-meta.xml
<CustomField>
    <fullName>dcp_Description_Circumstances_of_Claim__c</fullName>
    <description>Detailed description of Claim</description>
    <label>Description / Circumstances of Claim</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>