force-app/main/default/objects/Case/fields/DCP_Document_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>DCP_Document_Header_Text__c</fullName>
    <description>For financial Reporting - Not for UI</description>
    <label>Document Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>