force-app/main/default/objects/Case/fields/dcp_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>dcp_Due_Date__c</fullName>
    <description>Due date of Case closure</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>