force-app/main/default/objects/Case/fields/dcp_ElecGas_Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>dcp_ElecGas_Complaint_Category__c</fullName>
    <description>Values for electricity and gas complaint categories.</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>dcp_Customer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access to property</fullName>
            </value>
            <value>
                <fullName>Asset - Elec</fullName>
            </value>
            <value>
                <fullName>Asset - Gas</fullName>
            </value>
            <value>
                <fullName>Auto Reclose</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Cross Metering</fullName>
            </value>
            <value>
                <fullName>Customer Asset</fullName>
            </value>
            <value>
                <fullName>Customer Error - Not AusNet</fullName>
            </value>
            <value>
                <fullName>Customer Installation Defect</fullName>
            </value>
            <value>
                <fullName>Customer Projects</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Dial Before You Dig</fullName>
            </value>
            <value>
                <fullName>Disconnection in Error</fullName>
            </value>
            <value>
                <fullName>GSL Payment</fullName>
            </value>
            <value>
                <fullName>Helicopter</fullName>
            </value>
            <value>
                <fullName>Incident Investigation</fullName>
            </value>
            <value>
                <fullName>Insurance letter request</fullName>
            </value>
            <value>
                <fullName>Logical Conversion Delay</fullName>
            </value>
            <value>
                <fullName>Meter - Elec</fullName>
            </value>
            <value>
                <fullName>Meter - Gas</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>New Connection - Elec</fullName>
            </value>
            <value>
                <fullName>New Connection - Gas</fullName>
            </value>
            <value>
                <fullName>No Incident Found</fullName>
            </value>
            <value>
                <fullName>Outage</fullName>
            </value>
            <value>
                <fullName>Personal Injury</fullName>
            </value>
            <value>
                <fullName>Planned Outage</fullName>
            </value>
            <value>
                <fullName>POEL - Private Overhead Electric Line</fullName>
            </value>
            <value>
                <fullName>Privacy Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>