force-app/main/default/objects/Case/fields/dcp_Employer_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_Employer_Number__c</fullName>
    <description>Captures Employer Number from Storm Relief form</description>
    <label>Employer No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>