force-app/main/default/objects/Case/fields/dcp_EPL__c.field-meta.xml
<CustomField>
    <fullName>dcp_EPL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPL</label>
    <type>Checkbox</type>
</CustomField>