force-app/main/default/objects/Case/fields/dcp_Escalation_Contact__c.field-meta.xml
<CustomField>
    <fullName>dcp_Escalation_Contact__c</fullName>
    <label>Escalation Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>