force-app/main/default/objects/Case/fields/dcp_Escalation_Email__c.field-meta.xml
<CustomField>
    <fullName>dcp_Escalation_Email__c</fullName>
    <description>Captures alternative contact&apos;s email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>