force-app/main/default/objects/Case/fields/DCP_EWOV__c.field-meta.xml
<CustomField>
    <fullName>DCP_EWOV__c</fullName>
    <formula>Account.DCP_EWOV__c</formula>
    <label>EWOV?</label>
    <type>Checkbox</type>
</CustomField>