force-app/main/default/objects/Case/fields/dcp_EWOV_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_EWOV_Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>EWOV Case Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>