force-app/main/default/objects/Case/fields/dcp_EWOV_Customer_Statement__c.field-meta.xml
<CustomField>
    <fullName>dcp_EWOV_Customer_Statement__c</fullName>
    <description>This captures customer statement from incoming EWOV email</description>
    <inlineHelpText>This captures customer statement from incoming EWOV email</inlineHelpText>
    <label>Customer Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>