force-app/main/default/objects/Case/fields/dcp_EWOV_Level__c.field-meta.xml
<CustomField>
    <fullName>dcp_EWOV_Level__c</fullName>
    <description>Level of EWOV Case</description>
    <label>EWOV Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assisted Referral</fullName>
            </value>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
            <value>
                <fullName>Final Stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>