force-app/main/default/objects/Case/fields/dcp_EWOV_Salutation__c.field-meta.xml
<CustomField>
    <fullName>dcp_EWOV_Salutation__c</fullName>
    <description>Captures salutation of the customer from the New Assisted Referral</description>
    <inlineHelpText>Captures salutation of the customer from the New Assisted Referral</inlineHelpText>
    <label>Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>