force-app/main/default/objects/Case/fields/DCP_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>DCP_Exchange_Rate__c</fullName>
    <description>For financial Reporting - Not for UI</description>
    <label>Exchange Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>