force-app/main/default/objects/Case/fields/dcp_External_Id__c.field-meta.xml
<CustomField>
    <fullName>dcp_External_Id__c</fullName>
    <description>External Id that captures the Id from the MVP org. Used primarily for the migration from MVP org to DER/TVE11 org.</description>
    <externalId>true</externalId>
    <label>DCP External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>