force-app/main/default/objects/Case/fields/DCP_External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>DCP_External_System_Id__c</fullName>
    <description>Field to populate External ID from SNOW</description>
    <externalId>true</externalId>
    <label>External System Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>