force-app/main/default/objects/Case/fields/dcp_Feeder__c.field-meta.xml
<CustomField>
    <fullName>dcp_Feeder__c</fullName>
    <label>Feeder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>