force-app/main/default/objects/Case/fields/dcp_Final_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>dcp_Final_Stage_Date__c</fullName>
    <label>Final Stage Date</label>
    <type>Date</type>
</CustomField>