force-app/main/default/objects/Case/fields/dcp_GLCode__c.field-meta.xml
<CustomField>
    <fullName>dcp_GLCode__c</fullName>
    <label>GLCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>521601</fullName>
            </value>
            <value>
                <fullName>521602</fullName>
            </value>
            <value>
                <fullName>521603</fullName>
            </value>
            <value>
                <fullName>521605</fullName>
                <isActive>false</isActive>
                <label>521605</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>