force-app/main/default/objects/Case/fields/dcp_Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>dcp_Incident_Date__c</fullName>
    <description>Date of incident</description>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>