force-app/main/default/objects/Case/fields/dcp_Initial_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>dcp_Initial_Claim_Amount__c</fullName>
    <description>Initial amount claimed by customer</description>
    <label>Initial Claim Amount</label>
    <summarizedField>dcp_Claim_Item__c.dcp_Claim_Amount__c</summarizedField>
    <summaryForeignKey>dcp_Claim_Item__c.dcp_Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>