force-app/main/default/objects/Case/fields/dcp_Is_NMI_eligible__c.field-meta.xml
<CustomField>
    <fullName>dcp_Is_NMI_eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether NMI is eligible for storm payments</description>
    <label>Is NMI eligible</label>
    <type>Checkbox</type>
</CustomField>