force-app/main/default/objects/Case/fields/dcp_Last_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>dcp_Last_Customer_Contact__c</fullName>
    <description>Date/time of last interaction with customer</description>
    <label>Last Customer Contact</label>
    <type>DateTime</type>
</CustomField>