force-app/main/default/objects/Case/fields/DCP_Legacy_email__c.field-meta.xml
<CustomField>
    <fullName>DCP_Legacy_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy email</label>
    <type>Checkbox</type>
</CustomField>