force-app/main/default/objects/Case/fields/dcp_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_Legal_Name__c</fullName>
    <description>Captures Legal Name from Storm Relief form</description>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>