force-app/main/default/objects/Case/fields/dcp_Mail_received_from_customer__c.field-meta.xml
<CustomField>
    <fullName>dcp_Mail_received_from_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>populated by flow whenever customer sends an email</description>
    <label>Mail received from customer</label>
    <type>Checkbox</type>
</CustomField>