force-app/main/default/objects/Case/fields/dcp_Market_Identifier__c.field-meta.xml
<CustomField>
    <fullName>dcp_Market_Identifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Identifier</label>
    <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>