force-app/main/default/objects/Case/fields/dcp_MIRN__c.field-meta.xml
<CustomField>
    <fullName>dcp_MIRN__c</fullName>
    <description>Captures the unique Meter Installation Registration Number</description>
    <label>MIRN</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>