force-app/main/default/objects/Case/fields/dcp_Multiple_NMI__c.field-meta.xml
<CustomField>
    <fullName>dcp_Multiple_NMI__c</fullName>
    <description>Used to load multiple NMI&apos;s for communications</description>
    <label>Multiple NMI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>