force-app/main/default/objects/Case/fields/dcp_MVP_Original_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_MVP_Original_Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>MVP Original Case Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>