force-app/main/default/objects/Case/fields/dcp_MVP_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>dcp_MVP_Owner_Email__c</fullName>
    <description>The email of the original owner of the case record. To be used for data migration from MVP to DER/TVE11 org.</description>
    <externalId>true</externalId>
    <label>MVP Owner Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>