force-app/main/default/objects/Case/fields/dcp_NMI__c.field-meta.xml
<CustomField>
    <fullName>dcp_NMI__c</fullName>
    <description>Captures the unique National Meter Identifier</description>
    <label>NMI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>