force-app/main/default/objects/Case/fields/DCP_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>DCP_Parent_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to be checked by flow to mark a storm relief case as parent fop multiple cases with same NMI identification and association with</description>
    <label>Parent Case</label>
    <type>Checkbox</type>
</CustomField>