force-app/main/default/objects/Case/fields/dcp_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>dcp_Pay_Type__c</fullName>
    <label>Pay Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>