force-app/main/default/objects/Case/fields/dcp_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>dcp_Payment_Type__c</fullName>
    <description>Customer payment types</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>