force-app/main/default/objects/Case/fields/dcp_Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>dcp_Postal_Address__c</fullName>
    <description>Captures Shipping Address of Account associated to Case</description>
    <formula>Account.ShippingStreet &amp; BR() &amp;
Account.ShippingCity &amp; &quot;, &quot; &amp;
Account.ShippingState &amp; &quot; &quot; &amp;
Account.ShippingPostalCode &amp; BR() &amp;
Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Address</label>
    <type>Text</type>
</CustomField>