force-app/main/default/objects/Case/fields/DCP_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>DCP_Posting_Date__c</fullName>
    <description>For financial reporting - not for UI</description>
    <formula>TEXT(DAY(TODAY()))+&quot;.&quot; +TEXT(MONTH(TODAY()))+&quot;.&quot; +TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Date</label>
    <type>Text</type>
</CustomField>