force-app/main/default/objects/Case/fields/DCP_Posting_Key__c.field-meta.xml
<CustomField>
    <fullName>DCP_Posting_Key__c</fullName>
    <description>For financial Reporting - Not for UI</description>
    <label>Posting Key</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>