force-app/main/default/objects/Case/fields/dcp_PPOP_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_PPOP_Name__c</fullName>
    <description>Captures customer name for email templates</description>
    <formula>IF(NOT(ISBLANK( Contact.FirstName )), Contact.FirstName,(IF(NOT(ISBLANK(SuppliedName)),(LEFT(SuppliedName,FIND(&quot; &quot;,SuppliedName)-1)),dcp_w2c_First_Name__c )))</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>