force-app/main/default/objects/Case/fields/dcp_Relationship__c.field-meta.xml
<CustomField>
    <fullName>dcp_Relationship__c</fullName>
    <description>Alternative contact&apos;s relationship</description>
    <label>Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>