force-app/main/default/objects/Case/fields/dcp_Residency_Status__c.field-meta.xml
<CustomField>
    <fullName>dcp_Residency_Status__c</fullName>
    <description>Residency status of contact associated to Case</description>
    <label>Residency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>