force-app/main/default/objects/Case/fields/dcp_Resolution_Sought__c.field-meta.xml
<CustomField>
    <fullName>dcp_Resolution_Sought__c</fullName>
    <description>Case resolution details</description>
    <label>Resolution Sought</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>