force-app/main/default/objects/Case/fields/dcp_RFI_Instructions__c.field-meta.xml
<CustomField>
    <fullName>dcp_RFI_Instructions__c</fullName>
    <label>RFI Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>