force-app/main/default/objects/Case/fields/dcp_Settled_Amount__c.field-meta.xml
<CustomField>
    <fullName>dcp_Settled_Amount__c</fullName>
    <description>Sum of the Assessed Amount of Claim Items related to a Case</description>
    <label>Settled Amount</label>
    <summarizedField>dcp_Claim_Item__c.dcp_Assessed_Amount__c</summarizedField>
    <summaryForeignKey>dcp_Claim_Item__c.dcp_Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>