force-app/main/default/objects/Case/fields/dcp_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>dcp_Short_Description__c</fullName>
    <description>Details regarding the Case</description>
    <label>Short Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>