force-app/main/default/objects/Case/fields/dcp_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>dcp_Site_Address__c</fullName>
    <formula>dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__StreetAddress__c &amp; BR() &amp;
dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__City__c &amp; &quot;, &quot; &amp;
dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__State__c  &amp; &quot; &quot; &amp;
dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__PostalCode__c &amp; BR() &amp;
dcp_Market_Identifier__r.vlocity_cmt__PremisesId__r.vlocity_cmt__Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>