force-app/main/default/objects/Case/fields/dcp_Sitecore_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>dcp_Sitecore_Reference_Id__c</fullName>
    <description>Stores sitecore reference id created via Web EAI</description>
    <label>Sitecore Reference Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>