force-app/main/default/objects/Case/fields/dcp_Skip_Validations__c.field-meta.xml
<CustomField>
    <fullName>dcp_Skip_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skips validations for Email2Case scenarios so the case record can be created without hitting validations</description>
    <inlineHelpText>Skips validations for Email2Case scenarios so the case record can be created without hitting validations</inlineHelpText>
    <label>Skip Validations</label>
    <type>Checkbox</type>
</CustomField>