force-app/main/default/objects/Case/fields/dcp_Stage_2_Date__c.field-meta.xml
<CustomField>
    <fullName>dcp_Stage_2_Date__c</fullName>
    <label>Stage 2 Date</label>
    <type>Date</type>
</CustomField>