force-app/main/default/objects/Case/fields/dcp_Storm_Event__c.field-meta.xml
<CustomField>
    <fullName>dcp_Storm_Event__c</fullName>
    <description>Event identifier so all the case records can go to the respective bucket.</description>
    <inlineHelpText>Event identifier so all the case records can go to the respective bucket.</inlineHelpText>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>