force-app/main/default/objects/Case/fields/dcp_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>dcp_Sub_Status__c</fullName>
    <description>Status subtype for Storm Relief cases</description>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound Required</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer</fullName>
            </value>
            <value>
                <fullName>Complex Investigation</fullName>
            </value>
            <value>
                <fullName>DELWP</fullName>
            </value>
            <value>
                <fullName>Investigated - Eligible</fullName>
            </value>
            <value>
                <fullName>Payment Details Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>