force-app/main/default/objects/Case/fields/dcp_Suggested_Contact__c.field-meta.xml
<CustomField>
    <fullName>dcp_Suggested_Contact__c</fullName>
    <label>Suggested Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>