force-app/main/default/objects/Case/fields/dcp_Suggested_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>dcp_Suggested_Contact_Email__c</fullName>
    <label>Suggested Contact Email</label>
    <type>Email</type>
</CustomField>