force-app/main/default/objects/Case/fields/dcp_Suggested_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>dcp_Suggested_Contact_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>